<package>
  <name>saw_claron_micron_tracker</name>
  <version>1.1.0</version>
  <description>
  sawClaronMicrontracker
  </description>
  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <license>cisst</license>
  <url>https://github.com/jhu-saw/sawClaronMicrontracker</url>

  <build_depend>cisst</build_depend>
  <run_depend>cisst</run_depend>

  <export>
    <build_type>catkin</build_type>
  </export>

</package>
