<?xml version="1.0"?>
<package>
  <name>micron_tracker_ros</name>
  <version>1.1.0</version>
  <description>The micron tracker ROS package</description>

  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <license>cisst</license>
  <url>https://github.com/jhu-saw/sawClaronMicronTracker</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>saw_claron_micron_tracker</build_depend>
  <build_depend>cisst_ros_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslib</build_depend>

  <run_depend>saw_claron_micron_tracker</run_depend>
  <run_depend>cisst_ros_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roslib</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
